syntax = "proto3";

option java_multiple_files = true;
package com.example.grpc;


message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}


service GatewayLoginService {
  rpc login(LoginRequest) returns (LoginResponse);
}